Commit on 29 Jul 2025

--- a/settings/internal/com.kms.katalon.integration.analytics.properties
+++ b/settings/internal/com.kms.katalon.integration.analytics.properties
@@ -1,11 +1,11 @@
 analytics.onpremise.enable=true
 onpremise.email="sashidhar.mudigonda@katalon.com"
 onpremise.password="e1qugNizMi2eBerl4ChuHQ\=\="
-analytics.onpremise.organization="{\\"accountId\\"\:1302315,\\"accountUuid\\"\:\\"624b61e9-ee43-4b23-8bf1-ccecb8858358\\",\\"id\\"\:1458109,\\"name\\"\:\\"Sashi Organization_01\\",\\"role\\"\:\\"OWNER\\",\\"samlSSO\\"\:false,\\"kreLicense\\"\:false,\\"strictDomain\\"\:false}"
+analytics.onpremise.organization="{\\"accountId\\"\:1489519,\\"accountUuid\\"\:\\"0a7a6246-1c43-471c-a311-a40430bffdc1\\",\\"id\\"\:2135177,\\"name\\"\:\\"Sashi TOG3\\",\\"role\\"\:\\"OWNER\\",\\"samlSSO\\"\:false,\\"kreLicense\\"\:false,\\"strictDomain\\"\:false,\\"domain\\"\:\\"success-katalon-g2\\"}"
 analytics.onpremise.server="https\://testops.katalon.io"
 analytics.integration.enable=true
-analytics.project="{\\n  \\"id\\"\: 2049488,\\n  \\"name\\"\: \\"Test Project 2\\",\\n  \\"teamId\\"\: 2029923,\\n  \\"organizationId\\"\: 1458109,\\n  \\"isSampleProject\\"\: false,\\n  \\"canAutoIntegrate\\"\: false\\n}"
-analytics.team="{\\n  \\"id\\"\: 2029923\\n}"
-analytics.testcloud.integration.enable=false
-analytics.testreport.autoupload.enable=false
-analytics.testcloud.hub.switchHub.enable=false
+analytics.project="{\\n  \\"id\\"\: 2100129,\\n  \\"name\\"\: \\"Sashi_TOG3_Project 1\\",\\n  \\"teamId\\"\: 2080390,\\n  \\"organizationId\\"\: 2135177,\\n  \\"isSampleProject\\"\: false,\\n  \\"canAutoIntegrate\\"\: false\\n}"
+analytics.team="{\\n  \\"id\\"\: 2080390\\n}"
+analytics.testcloud.integration.enable=true
+analytics.testreport.autoupload.enable=true
+analytics.testcloud.hub.switchHub.enable=true
